// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props.hubs is false 1`] = `""`;

exports[`props.loading is true 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <Component
    content={
      <div
        className="flex-100"
      >
        <div
          className="flex-100 layout-row layout-wrap layout-align-space-between-start"
        >
          <p
            className="sec_title_text_normal flex-none"
          >
            Shipment:
          </p>
          <p
            className="sec_title_text flex-none offset-5"
            style="#333"
          />
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-space-between-start"
        >
          <p
            className="sec_subtitle_text_normal flex-none"
          >
            Status:
          </p>
          <p
            className="sec_subtitle_text flex-none offset-5 "
          />
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-space-between-start"
        >
          <p
            className="sec_subtitle_text_normal flex-none"
          >
            Created at:
          </p>
          <p
            className="sec_subtitle_text flex-none offset-5"
          >
            19
          </p>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Overview"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100"
      >
        <RouteHubBox
          route={
            Array [
              Object {
                "hub_route_key": "OCEAN_HUB_ROUTE_KEY",
                "mode_of_transport": "ocean",
              },
              Object {
                "hub_route_key": "AIR_HUB_ROUTE_KEY",
                "mode_of_transport": "air",
              },
              Object {
                "hub_route_key": "TRUCK_HUB_ROUTE_KEY",
                "mode_of_transport": "truck",
              },
              Object {
                "hub_route_key": "RAIL_HUB_ROUTE_KEY",
                "mode_of_transport": "rail",
              },
            ]
          }
          shipment={
            Object {
              "cargo_notes": "FOO_CARGO_NOTES",
              "eori": 1234,
              "has_on_carriage": false,
              "has_pre_carriage": false,
              "incoterm_text": "FOO_INCOTERM_TEXT",
              "load_type": "OCEAN_LOAD_TYPE",
              "notes": "FOO_NOTES",
              "schedules_charges": Object {
                "AIR_HUB_ROUTE_KEY": Object {
                  "total": 200,
                },
                "OCEAN_HUB_ROUTE_KEY": Object {
                  "total": 40,
                },
                "RAIL_HUB_ROUTE_KEY": Object {
                  "total": 125,
                },
                "TRUCK_HUB_ROUTE_KEY": Object {
                  "total": 75,
                },
              },
              "total_goods_value": Object {
                "currency": "USD",
                "value": 15,
              },
              "total_price": Object {
                "currency": "USD",
                "value": 12,
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
        <div
          className="flex-100 layout-row layout-align-space-between-center"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            className="flex-40 layout-row layout-wrap layout-align-center-center"
          >
            <div
              className="flex-100 layout-row layout-align-center-start layout-wrap"
            >
              <p
                className="flex-100 center letter_3"
              >
                 
                Expected Time of Departure:
              </p>
              <p
                className="flex-none letter_3"
              >
                19
              </p>
            </div>
          </div>
          <div
            className="flex-40 layout-row layout-wrap layout-align-center-center"
          >
            <div
              className="flex-100 layout-row layout-align-center-start layout-wrap"
            >
              <p
                className="flex-100 center letter_3"
              >
                 Expected Time of Arrival:
              </p>
              <p
                className="flex-none letter_3"
              >
                19
              </p>
            </div>
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Itinerary"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100"
      >
        <div
          className="total_row flex-100 layout-row layout-wrap layout-align-space-around-center"
        >
          <h3
            className="flex-70 letter_3"
          >
            Shipment Total:
          </h3>
          <div
            className="flex-30 layout-row layout-align-end-center"
          >
            <h3
              className="flex-none letter_3"
            >
              12.00
               
              USD
            </h3>
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-center-center"
        >
          <div
            className="flex-none content_width_booking layout-row layout-align-center-center"
          >
            <IncotermRow
              destinationFees={false}
              feeHash={Object {}}
              onCarriage={false}
              originFees={false}
              preCarriage={false}
              tenant={
                Object {
                  "data": Object {
                    "id": 123,
                    "scope": Object {
                      "modes_of_transport": Object {
                        "air": Object {},
                        "ocean": Object {
                          "OCEAN_LOAD_TYPE": true,
                        },
                        "rail": Object {},
                        "truck": Object {},
                      },
                    },
                    "subdomain": "foosubdomain",
                    "theme": Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    },
                  },
                }
              }
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Fares & Fees"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100"
      >
        <div
          className="flex-100 layout-row layout-align-center-center"
        >
          <div
            className="flex-none content_width_booking layout-row layout-align-center-center"
          >
            <IncotermExtras
              feeHash={Object {}}
              tenant={
                Object {
                  "data": Object {
                    "id": 123,
                    "scope": Object {
                      "modes_of_transport": Object {
                        "air": Object {},
                        "ocean": Object {
                          "OCEAN_LOAD_TYPE": true,
                        },
                        "rail": Object {},
                        "truck": Object {},
                      },
                    },
                    "subdomain": "foosubdomain",
                    "theme": Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    },
                  },
                }
              }
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Additional Services"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="layout-row layout-align-start-center b_summ_top flex-100 "
        >
          
        </div>
        <div
          className="layout-row layout-align-space-around-center b_summ_top flex-100 "
        >
          
          
        </div>
        <div
          className="flex-100 layout-row layout-align-space-around-center layout-wrap"
        >
           
           
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Contact Details"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center"
      />
    }
    handleCollapser={[Function]}
    headingText="Cargo Details"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center"
      >
        <div
          className="flex-100 layout-row layout-align-start-center"
        >
          <div
            className="flex-45 layout-row offset-5 layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Total Value of Goods:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              USD 15
            </p>
          </div>
          <div
            className="flex-45 offset-10 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                EORI number:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              1234
            </p>
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-space-around-center"
        >
          <div
            className="flex-45 offset-5 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Description of Goods:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              FOO_CARGO_NOTES
            </p>
          </div>
          <div
            className="flex-45 offset-5 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Notes:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              FOO_NOTES
            </p>
          </div>
          <div
            className="flex-45 offset-5 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Incoterm:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              FOO_INCOTERM_TEXT
            </p>
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Additional Info"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="flex-100 layout-row layout-wrap layout-align-start-center"
        >
          <div
            className="flex-100 sec_subheader layout-row layout-align-space-between-center"
          >
            <p
              className="sec_subheader_text flex-none letter_3"
            >
              Upload New Document
            </p>
          </div>
          <div
            className="flex-50 layout-align-start-center layout-row"
          >
            <Styled(Select)
              className="select"
              name="file-type"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "Packing Sheet",
                    "value": "packing_sheet",
                  },
                  Object {
                    "label": "Commercial Invoice",
                    "value": "commercial_invoice",
                  },
                  Object {
                    "label": "Customs Declaration",
                    "value": "customs_declaration",
                  },
                  Object {
                    "label": "Customs Value Declaration",
                    "value": "customs_value_declaration",
                  },
                  Object {
                    "label": "EORI",
                    "value": "eori",
                  },
                  Object {
                    "label": "Certificate Of Origin",
                    "value": "certificate_of_origin",
                  },
                  Object {
                    "label": "Dangerous Goods",
                    "value": "dangerous_goods",
                  },
                ]
              }
              value={
                Object {
                  "label": "Packing Sheet",
                  "value": "packing_sheet",
                }
              }
            />
          </div>
          <div
            className="flex-50 layout-align-end-center layout-row"
          >
            <FileUploader
              dispatchFn={null}
              square={false}
              text="Packing Sheet"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
              tooltip=""
              type="packing_sheet"
              uploadFn={null}
              url="/shipments/undefined/upload/packing_sheet"
            />
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-start-center"
          style={
            Object {
              "marginTop": "5px",
            }
          }
        />
        <div
          className="flex-100 layout-row layout-wrap layout-align-start-center"
          style={
            Object {
              "marginTop": "5px",
            }
          }
        >
          <div
            className="flex-25 layout-row layout-align-start-center no_doc"
          >
            <div
              className="flex-none layout-row layout-align-center-center"
            >
              <i
                className="flex-none fa fa-ban"
              />
            </div>
            <div
              className="flex layout-align-start-center layout-row"
            >
              <p
                className="flex-none"
              >
                undefined: Not Uploaded
              </p>
            </div>
          </div>
          <div
            className="flex-25 layout-row layout-align-start-center no_doc"
          >
            <div
              className="flex-none layout-row layout-align-center-center"
            >
              <i
                className="flex-none fa fa-ban"
              />
            </div>
            <div
              className="flex layout-align-start-center layout-row"
            >
              <p
                className="flex-none"
              >
                undefined: Not Uploaded
              </p>
            </div>
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Documents"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
</div>
`;

exports[`props.shipmentData.cargoItems is present 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <Component
    content={
      <div
        className="flex-100"
      >
        <div
          className="flex-100 layout-row layout-wrap layout-align-space-between-start"
        >
          <p
            className="sec_title_text_normal flex-none"
          >
            Shipment:
          </p>
          <p
            className="sec_title_text flex-none offset-5"
            style="#333"
          />
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-space-between-start"
        >
          <p
            className="sec_subtitle_text_normal flex-none"
          >
            Status:
          </p>
          <p
            className="sec_subtitle_text flex-none offset-5 "
          />
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-space-between-start"
        >
          <p
            className="sec_subtitle_text_normal flex-none"
          >
            Created at:
          </p>
          <p
            className="sec_subtitle_text flex-none offset-5"
          >
            19
          </p>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Overview"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100"
      >
        <RouteHubBox
          route={
            Array [
              Object {
                "hub_route_key": "OCEAN_HUB_ROUTE_KEY",
                "mode_of_transport": "ocean",
              },
              Object {
                "hub_route_key": "AIR_HUB_ROUTE_KEY",
                "mode_of_transport": "air",
              },
              Object {
                "hub_route_key": "TRUCK_HUB_ROUTE_KEY",
                "mode_of_transport": "truck",
              },
              Object {
                "hub_route_key": "RAIL_HUB_ROUTE_KEY",
                "mode_of_transport": "rail",
              },
            ]
          }
          shipment={
            Object {
              "cargo_notes": "FOO_CARGO_NOTES",
              "eori": 1234,
              "has_on_carriage": false,
              "has_pre_carriage": false,
              "incoterm_text": "FOO_INCOTERM_TEXT",
              "load_type": "OCEAN_LOAD_TYPE",
              "notes": "FOO_NOTES",
              "schedules_charges": Object {
                "AIR_HUB_ROUTE_KEY": Object {
                  "total": 200,
                },
                "OCEAN_HUB_ROUTE_KEY": Object {
                  "total": 40,
                },
                "RAIL_HUB_ROUTE_KEY": Object {
                  "total": 125,
                },
                "TRUCK_HUB_ROUTE_KEY": Object {
                  "total": 75,
                },
              },
              "total_goods_value": Object {
                "currency": "USD",
                "value": 15,
              },
              "total_price": Object {
                "currency": "USD",
                "value": 12,
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
        <div
          className="flex-100 layout-row layout-align-space-between-center"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            className="flex-40 layout-row layout-wrap layout-align-center-center"
          >
            <div
              className="flex-100 layout-row layout-align-center-start layout-wrap"
            >
              <p
                className="flex-100 center letter_3"
              >
                 
                Expected Time of Departure:
              </p>
              <p
                className="flex-none letter_3"
              >
                19
              </p>
            </div>
          </div>
          <div
            className="flex-40 layout-row layout-wrap layout-align-center-center"
          >
            <div
              className="flex-100 layout-row layout-align-center-start layout-wrap"
            >
              <p
                className="flex-100 center letter_3"
              >
                 Expected Time of Arrival:
              </p>
              <p
                className="flex-none letter_3"
              >
                19
              </p>
            </div>
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Itinerary"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100"
      >
        <div
          className="total_row flex-100 layout-row layout-wrap layout-align-space-around-center"
        >
          <h3
            className="flex-70 letter_3"
          >
            Shipment Total:
          </h3>
          <div
            className="flex-30 layout-row layout-align-end-center"
          >
            <h3
              className="flex-none letter_3"
            >
              12.00
               
              USD
            </h3>
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-center-center"
        >
          <div
            className="flex-none content_width_booking layout-row layout-align-center-center"
          >
            <IncotermRow
              destinationFees={false}
              feeHash={Object {}}
              onCarriage={false}
              originFees={false}
              preCarriage={false}
              tenant={
                Object {
                  "data": Object {
                    "id": 123,
                    "scope": Object {
                      "modes_of_transport": Object {
                        "air": Object {},
                        "ocean": Object {
                          "OCEAN_LOAD_TYPE": true,
                        },
                        "rail": Object {},
                        "truck": Object {},
                      },
                    },
                    "subdomain": "foosubdomain",
                    "theme": Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    },
                  },
                }
              }
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Fares & Fees"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100"
      >
        <div
          className="flex-100 layout-row layout-align-center-center"
        >
          <div
            className="flex-none content_width_booking layout-row layout-align-center-center"
          >
            <IncotermExtras
              feeHash={Object {}}
              tenant={
                Object {
                  "data": Object {
                    "id": 123,
                    "scope": Object {
                      "modes_of_transport": Object {
                        "air": Object {},
                        "ocean": Object {
                          "OCEAN_LOAD_TYPE": true,
                        },
                        "rail": Object {},
                        "truck": Object {},
                      },
                    },
                    "subdomain": "foosubdomain",
                    "theme": Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    },
                  },
                }
              }
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Additional Services"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="layout-row layout-align-start-center b_summ_top flex-100 "
        >
          
        </div>
        <div
          className="layout-row layout-align-space-around-center b_summ_top flex-100 "
        >
          
          
        </div>
        <div
          className="flex-100 layout-row layout-align-space-around-center layout-wrap"
        >
           
           
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Contact Details"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center"
      >
        <CargoItemGroup
          group={
            Object {
              "cargoType": "FOO_CARGO_TYPE",
              "cargo_group_id": 0,
              "chargeable_weight": NaN,
              "dimension_x": NaN,
              "dimension_y": NaN,
              "dimension_z": NaN,
              "groupAlias": 1,
              "hsCodes": undefined,
              "hsText": undefined,
              "items": Array [],
              "payload_in_kg": NaN,
              "quantity": 1,
              "volume": NaN,
            }
          }
          shipment={Object {}}
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
        <CargoItemGroup
          group={
            Object {
              "cargoType": "BAR_CARGO_TYPE",
              "cargo_group_id": 1,
              "chargeable_weight": NaN,
              "dimension_x": NaN,
              "dimension_y": NaN,
              "dimension_z": NaN,
              "groupAlias": 2,
              "hsCodes": undefined,
              "hsText": undefined,
              "items": Array [],
              "payload_in_kg": NaN,
              "quantity": 1,
              "volume": NaN,
            }
          }
          shipment={Object {}}
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
    }
    handleCollapser={[Function]}
    headingText="Cargo Details"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center"
      >
        <div
          className="flex-100 layout-row layout-align-start-center"
        >
          <div
            className="flex-45 layout-row offset-5 layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Total Value of Goods:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              USD 15
            </p>
          </div>
          <div
            className="flex-45 offset-10 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                EORI number:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              1234
            </p>
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-space-around-center"
        >
          <div
            className="flex-45 offset-5 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Description of Goods:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              FOO_CARGO_NOTES
            </p>
          </div>
          <div
            className="flex-45 offset-5 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Notes:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              FOO_NOTES
            </p>
          </div>
          <div
            className="flex-45 offset-5 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Incoterm:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              FOO_INCOTERM_TEXT
            </p>
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Additional Info"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="flex-100 layout-row layout-wrap layout-align-start-center"
        >
          <div
            className="flex-100 sec_subheader layout-row layout-align-space-between-center"
          >
            <p
              className="sec_subheader_text flex-none letter_3"
            >
              Upload New Document
            </p>
          </div>
          <div
            className="flex-50 layout-align-start-center layout-row"
          >
            <Styled(Select)
              className="select"
              name="file-type"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "Packing Sheet",
                    "value": "packing_sheet",
                  },
                  Object {
                    "label": "Commercial Invoice",
                    "value": "commercial_invoice",
                  },
                  Object {
                    "label": "Customs Declaration",
                    "value": "customs_declaration",
                  },
                  Object {
                    "label": "Customs Value Declaration",
                    "value": "customs_value_declaration",
                  },
                  Object {
                    "label": "EORI",
                    "value": "eori",
                  },
                  Object {
                    "label": "Certificate Of Origin",
                    "value": "certificate_of_origin",
                  },
                  Object {
                    "label": "Dangerous Goods",
                    "value": "dangerous_goods",
                  },
                ]
              }
              value={
                Object {
                  "label": "Packing Sheet",
                  "value": "packing_sheet",
                }
              }
            />
          </div>
          <div
            className="flex-50 layout-align-end-center layout-row"
          >
            <FileUploader
              dispatchFn={null}
              square={false}
              text="Packing Sheet"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
              tooltip=""
              type="packing_sheet"
              uploadFn={null}
              url="/shipments/undefined/upload/packing_sheet"
            />
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-start-center"
          style={
            Object {
              "marginTop": "5px",
            }
          }
        />
        <div
          className="flex-100 layout-row layout-wrap layout-align-start-center"
          style={
            Object {
              "marginTop": "5px",
            }
          }
        >
          <div
            className="flex-25 layout-row layout-align-start-center no_doc"
          >
            <div
              className="flex-none layout-row layout-align-center-center"
            >
              <i
                className="flex-none fa fa-ban"
              />
            </div>
            <div
              className="flex layout-align-start-center layout-row"
            >
              <p
                className="flex-none"
              >
                undefined: Not Uploaded
              </p>
            </div>
          </div>
          <div
            className="flex-25 layout-row layout-align-start-center no_doc"
          >
            <div
              className="flex-none layout-row layout-align-center-center"
            >
              <i
                className="flex-none fa fa-ban"
              />
            </div>
            <div
              className="flex layout-align-start-center layout-row"
            >
              <p
                className="flex-none"
              >
                undefined: Not Uploaded
              </p>
            </div>
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Documents"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
</div>
`;

exports[`props.shipmentData.contacts is present 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <Component
    content={
      <div
        className="flex-100"
      >
        <div
          className="flex-100 layout-row layout-wrap layout-align-space-between-start"
        >
          <p
            className="sec_title_text_normal flex-none"
          >
            Shipment:
          </p>
          <p
            className="sec_title_text flex-none offset-5"
            style="#333"
          />
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-space-between-start"
        >
          <p
            className="sec_subtitle_text_normal flex-none"
          >
            Status:
          </p>
          <p
            className="sec_subtitle_text flex-none offset-5 "
          />
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-space-between-start"
        >
          <p
            className="sec_subtitle_text_normal flex-none"
          >
            Created at:
          </p>
          <p
            className="sec_subtitle_text flex-none offset-5"
          >
            19
          </p>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Overview"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100"
      >
        <RouteHubBox
          route={
            Array [
              Object {
                "hub_route_key": "OCEAN_HUB_ROUTE_KEY",
                "mode_of_transport": "ocean",
              },
              Object {
                "hub_route_key": "AIR_HUB_ROUTE_KEY",
                "mode_of_transport": "air",
              },
              Object {
                "hub_route_key": "TRUCK_HUB_ROUTE_KEY",
                "mode_of_transport": "truck",
              },
              Object {
                "hub_route_key": "RAIL_HUB_ROUTE_KEY",
                "mode_of_transport": "rail",
              },
            ]
          }
          shipment={
            Object {
              "cargo_notes": "FOO_CARGO_NOTES",
              "eori": 1234,
              "has_on_carriage": false,
              "has_pre_carriage": false,
              "incoterm_text": "FOO_INCOTERM_TEXT",
              "load_type": "OCEAN_LOAD_TYPE",
              "notes": "FOO_NOTES",
              "schedules_charges": Object {
                "AIR_HUB_ROUTE_KEY": Object {
                  "total": 200,
                },
                "OCEAN_HUB_ROUTE_KEY": Object {
                  "total": 40,
                },
                "RAIL_HUB_ROUTE_KEY": Object {
                  "total": 125,
                },
                "TRUCK_HUB_ROUTE_KEY": Object {
                  "total": 75,
                },
              },
              "total_goods_value": Object {
                "currency": "USD",
                "value": 15,
              },
              "total_price": Object {
                "currency": "USD",
                "value": 12,
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
        <div
          className="flex-100 layout-row layout-align-space-between-center"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            className="flex-40 layout-row layout-wrap layout-align-center-center"
          >
            <div
              className="flex-100 layout-row layout-align-center-start layout-wrap"
            >
              <p
                className="flex-100 center letter_3"
              >
                 
                Expected Time of Departure:
              </p>
              <p
                className="flex-none letter_3"
              >
                19
              </p>
            </div>
          </div>
          <div
            className="flex-40 layout-row layout-wrap layout-align-center-center"
          >
            <div
              className="flex-100 layout-row layout-align-center-start layout-wrap"
            >
              <p
                className="flex-100 center letter_3"
              >
                 Expected Time of Arrival:
              </p>
              <p
                className="flex-none letter_3"
              >
                19
              </p>
            </div>
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Itinerary"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100"
      >
        <div
          className="total_row flex-100 layout-row layout-wrap layout-align-space-around-center"
        >
          <h3
            className="flex-70 letter_3"
          >
            Shipment Total:
          </h3>
          <div
            className="flex-30 layout-row layout-align-end-center"
          >
            <h3
              className="flex-none letter_3"
            >
              12.00
               
              USD
            </h3>
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-center-center"
        >
          <div
            className="flex-none content_width_booking layout-row layout-align-center-center"
          >
            <IncotermRow
              destinationFees={false}
              feeHash={Object {}}
              onCarriage={false}
              originFees={false}
              preCarriage={false}
              tenant={
                Object {
                  "data": Object {
                    "id": 123,
                    "scope": Object {
                      "modes_of_transport": Object {
                        "air": Object {},
                        "ocean": Object {
                          "OCEAN_LOAD_TYPE": true,
                        },
                        "rail": Object {},
                        "truck": Object {},
                      },
                    },
                    "subdomain": "foosubdomain",
                    "theme": Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    },
                  },
                }
              }
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Fares & Fees"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100"
      >
        <div
          className="flex-100 layout-row layout-align-center-center"
        >
          <div
            className="flex-none content_width_booking layout-row layout-align-center-center"
          >
            <IncotermExtras
              feeHash={Object {}}
              tenant={
                Object {
                  "data": Object {
                    "id": 123,
                    "scope": Object {
                      "modes_of_transport": Object {
                        "air": Object {},
                        "ocean": Object {
                          "OCEAN_LOAD_TYPE": true,
                        },
                        "rail": Object {},
                        "truck": Object {},
                      },
                    },
                    "subdomain": "foosubdomain",
                    "theme": Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    },
                  },
                }
              }
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Additional Services"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="layout-row layout-align-start-center b_summ_top flex-100 "
        >
          
        </div>
        <div
          className="layout-row layout-align-space-around-center b_summ_top flex-100 "
        >
          <div
            className="flex-33 layout-row"
          >
            <div
              className="flex-15 layout-column layout-align-start-center"
            >
              <i
                className="icon fa fa-user-circle-o flex-none"
                style="#333"
              />
            </div>
            <div
              className="flex-85 layout-row layout-wrap layout-align-start-start"
            >
              <div
                className="flex-100"
              >
                <TextHeading
                  color=""
                  size={3}
                  text="Shipper"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
              <p
                className="address flex-100"
              >
                BAR_FIRST_NAME
                 
                BAR_LAST_NAME
                 
                <br />
                FOO_STREET
                 
                579
                 
                <br />
                22456
                 
                FOO_CITY
                 
                <br />
                Germany
              </p>
            </div>
          </div>
          <div
            className="flex-33 layout-row"
          >
            <div
              className="flex-15 layout-column layout-align-start-center"
            >
              <i
                className="icon fa fa-envelope-open-o flex-none"
                style="#333"
              />
            </div>
            <div
              className="flex-85 layout-row layout-wrap layout-align-start-start"
            >
              <div
                className="flex-100"
              >
                <TextHeading
                  color=""
                  size={3}
                  text="Receiver"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
              <p
                className="address flex-100"
              >
                BAZ_FIRST_NAME
                 
                BAZ_LAST_NAME
                 
                <br />
                FOO_STREET
                 
                579
                 
                <br />
                22456
                 
                FOO_CITY
                 
                <br />
                Germany
              </p>
            </div>
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-space-around-center layout-wrap"
        >
           
          <div
            className="flex-33 layout-row"
          >
            <div
              className="flex-15 layout-column layout-align-start-center"
            >
              <i
                className=" icon fa fa-user-circle-o flex-none"
                style="#333"
              />
            </div>
            <div
              className="flex-85 layout-row layout-wrap layout-align-start-start"
            >
              <div
                className="flex-100"
              >
                <TextHeading
                  color=""
                  size={3}
                  text="Notifyee"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
              <p
                className=" address flex-100"
              >
                FOO_FIRST_NAME
                 
                FOO_LAST_NAME
                 
                <br />
              </p>
            </div>
          </div>
           
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Contact Details"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center"
      />
    }
    handleCollapser={[Function]}
    headingText="Cargo Details"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center"
      >
        <div
          className="flex-100 layout-row layout-align-start-center"
        >
          <div
            className="flex-45 layout-row offset-5 layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Total Value of Goods:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              USD 15
            </p>
          </div>
          <div
            className="flex-45 offset-10 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                EORI number:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              1234
            </p>
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-space-around-center"
        >
          <div
            className="flex-45 offset-5 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Description of Goods:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              FOO_CARGO_NOTES
            </p>
          </div>
          <div
            className="flex-45 offset-5 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Notes:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              FOO_NOTES
            </p>
          </div>
          <div
            className="flex-45 offset-5 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Incoterm:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              FOO_INCOTERM_TEXT
            </p>
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Additional Info"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="flex-100 layout-row layout-wrap layout-align-start-center"
        >
          <div
            className="flex-100 sec_subheader layout-row layout-align-space-between-center"
          >
            <p
              className="sec_subheader_text flex-none letter_3"
            >
              Upload New Document
            </p>
          </div>
          <div
            className="flex-50 layout-align-start-center layout-row"
          >
            <Styled(Select)
              className="select"
              name="file-type"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "Packing Sheet",
                    "value": "packing_sheet",
                  },
                  Object {
                    "label": "Commercial Invoice",
                    "value": "commercial_invoice",
                  },
                  Object {
                    "label": "Customs Declaration",
                    "value": "customs_declaration",
                  },
                  Object {
                    "label": "Customs Value Declaration",
                    "value": "customs_value_declaration",
                  },
                  Object {
                    "label": "EORI",
                    "value": "eori",
                  },
                  Object {
                    "label": "Certificate Of Origin",
                    "value": "certificate_of_origin",
                  },
                  Object {
                    "label": "Dangerous Goods",
                    "value": "dangerous_goods",
                  },
                ]
              }
              value={
                Object {
                  "label": "Packing Sheet",
                  "value": "packing_sheet",
                }
              }
            />
          </div>
          <div
            className="flex-50 layout-align-end-center layout-row"
          >
            <FileUploader
              dispatchFn={null}
              square={false}
              text="Packing Sheet"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
              tooltip=""
              type="packing_sheet"
              uploadFn={null}
              url="/shipments/undefined/upload/packing_sheet"
            />
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-start-center"
          style={
            Object {
              "marginTop": "5px",
            }
          }
        />
        <div
          className="flex-100 layout-row layout-wrap layout-align-start-center"
          style={
            Object {
              "marginTop": "5px",
            }
          }
        >
          <div
            className="flex-25 layout-row layout-align-start-center no_doc"
          >
            <div
              className="flex-none layout-row layout-align-center-center"
            >
              <i
                className="flex-none fa fa-ban"
              />
            </div>
            <div
              className="flex layout-align-start-center layout-row"
            >
              <p
                className="flex-none"
              >
                undefined: Not Uploaded
              </p>
            </div>
          </div>
          <div
            className="flex-25 layout-row layout-align-start-center no_doc"
          >
            <div
              className="flex-none layout-row layout-align-center-center"
            >
              <i
                className="flex-none fa fa-ban"
              />
            </div>
            <div
              className="flex layout-align-start-center layout-row"
            >
              <p
                className="flex-none"
              >
                undefined: Not Uploaded
              </p>
            </div>
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Documents"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
</div>
`;

exports[`props.shipmentData.documents is present 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <Component
    content={
      <div
        className="flex-100"
      >
        <div
          className="flex-100 layout-row layout-wrap layout-align-space-between-start"
        >
          <p
            className="sec_title_text_normal flex-none"
          >
            Shipment:
          </p>
          <p
            className="sec_title_text flex-none offset-5"
            style="#333"
          />
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-space-between-start"
        >
          <p
            className="sec_subtitle_text_normal flex-none"
          >
            Status:
          </p>
          <p
            className="sec_subtitle_text flex-none offset-5 "
          />
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-space-between-start"
        >
          <p
            className="sec_subtitle_text_normal flex-none"
          >
            Created at:
          </p>
          <p
            className="sec_subtitle_text flex-none offset-5"
          >
            19
          </p>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Overview"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100"
      >
        <RouteHubBox
          route={
            Array [
              Object {
                "hub_route_key": "OCEAN_HUB_ROUTE_KEY",
                "mode_of_transport": "ocean",
              },
              Object {
                "hub_route_key": "AIR_HUB_ROUTE_KEY",
                "mode_of_transport": "air",
              },
              Object {
                "hub_route_key": "TRUCK_HUB_ROUTE_KEY",
                "mode_of_transport": "truck",
              },
              Object {
                "hub_route_key": "RAIL_HUB_ROUTE_KEY",
                "mode_of_transport": "rail",
              },
            ]
          }
          shipment={
            Object {
              "cargo_notes": "FOO_CARGO_NOTES",
              "eori": 1234,
              "has_on_carriage": false,
              "has_pre_carriage": false,
              "incoterm_text": "FOO_INCOTERM_TEXT",
              "load_type": "OCEAN_LOAD_TYPE",
              "notes": "FOO_NOTES",
              "schedules_charges": Object {
                "AIR_HUB_ROUTE_KEY": Object {
                  "total": 200,
                },
                "OCEAN_HUB_ROUTE_KEY": Object {
                  "total": 40,
                },
                "RAIL_HUB_ROUTE_KEY": Object {
                  "total": 125,
                },
                "TRUCK_HUB_ROUTE_KEY": Object {
                  "total": 75,
                },
              },
              "total_goods_value": Object {
                "currency": "USD",
                "value": 15,
              },
              "total_price": Object {
                "currency": "USD",
                "value": 12,
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
        <div
          className="flex-100 layout-row layout-align-space-between-center"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            className="flex-40 layout-row layout-wrap layout-align-center-center"
          >
            <div
              className="flex-100 layout-row layout-align-center-start layout-wrap"
            >
              <p
                className="flex-100 center letter_3"
              >
                 
                Expected Time of Departure:
              </p>
              <p
                className="flex-none letter_3"
              >
                19
              </p>
            </div>
          </div>
          <div
            className="flex-40 layout-row layout-wrap layout-align-center-center"
          >
            <div
              className="flex-100 layout-row layout-align-center-start layout-wrap"
            >
              <p
                className="flex-100 center letter_3"
              >
                 Expected Time of Arrival:
              </p>
              <p
                className="flex-none letter_3"
              >
                19
              </p>
            </div>
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Itinerary"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100"
      >
        <div
          className="total_row flex-100 layout-row layout-wrap layout-align-space-around-center"
        >
          <h3
            className="flex-70 letter_3"
          >
            Shipment Total:
          </h3>
          <div
            className="flex-30 layout-row layout-align-end-center"
          >
            <h3
              className="flex-none letter_3"
            >
              12.00
               
              USD
            </h3>
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-center-center"
        >
          <div
            className="flex-none content_width_booking layout-row layout-align-center-center"
          >
            <IncotermRow
              destinationFees={false}
              feeHash={Object {}}
              onCarriage={false}
              originFees={false}
              preCarriage={false}
              tenant={
                Object {
                  "data": Object {
                    "id": 123,
                    "scope": Object {
                      "modes_of_transport": Object {
                        "air": Object {},
                        "ocean": Object {
                          "OCEAN_LOAD_TYPE": true,
                        },
                        "rail": Object {},
                        "truck": Object {},
                      },
                    },
                    "subdomain": "foosubdomain",
                    "theme": Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    },
                  },
                }
              }
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Fares & Fees"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100"
      >
        <div
          className="flex-100 layout-row layout-align-center-center"
        >
          <div
            className="flex-none content_width_booking layout-row layout-align-center-center"
          >
            <IncotermExtras
              feeHash={Object {}}
              tenant={
                Object {
                  "data": Object {
                    "id": 123,
                    "scope": Object {
                      "modes_of_transport": Object {
                        "air": Object {},
                        "ocean": Object {
                          "OCEAN_LOAD_TYPE": true,
                        },
                        "rail": Object {},
                        "truck": Object {},
                      },
                    },
                    "subdomain": "foosubdomain",
                    "theme": Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    },
                  },
                }
              }
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Additional Services"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="layout-row layout-align-start-center b_summ_top flex-100 "
        >
          
        </div>
        <div
          className="layout-row layout-align-space-around-center b_summ_top flex-100 "
        >
          
          
        </div>
        <div
          className="flex-100 layout-row layout-align-space-around-center layout-wrap"
        >
           
           
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Contact Details"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center"
      />
    }
    handleCollapser={[Function]}
    headingText="Cargo Details"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center"
      >
        <div
          className="flex-100 layout-row layout-align-start-center"
        >
          <div
            className="flex-45 layout-row offset-5 layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Total Value of Goods:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              USD 15
            </p>
          </div>
          <div
            className="flex-45 offset-10 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                EORI number:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              1234
            </p>
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-space-around-center"
        >
          <div
            className="flex-45 offset-5 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Description of Goods:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              FOO_CARGO_NOTES
            </p>
          </div>
          <div
            className="flex-45 offset-5 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Notes:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              FOO_NOTES
            </p>
          </div>
          <div
            className="flex-45 offset-5 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Incoterm:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              FOO_INCOTERM_TEXT
            </p>
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Additional Info"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="flex-100 layout-row layout-wrap layout-align-start-center"
        >
          <div
            className="flex-100 sec_subheader layout-row layout-align-space-between-center"
          >
            <p
              className="sec_subheader_text flex-none letter_3"
            >
              Upload New Document
            </p>
          </div>
          <div
            className="flex-50 layout-align-start-center layout-row"
          >
            <Styled(Select)
              className="select"
              name="file-type"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "Packing Sheet",
                    "value": "packing_sheet",
                  },
                  Object {
                    "label": "Commercial Invoice",
                    "value": "commercial_invoice",
                  },
                  Object {
                    "label": "Customs Declaration",
                    "value": "customs_declaration",
                  },
                  Object {
                    "label": "Customs Value Declaration",
                    "value": "customs_value_declaration",
                  },
                  Object {
                    "label": "EORI",
                    "value": "eori",
                  },
                  Object {
                    "label": "Certificate Of Origin",
                    "value": "certificate_of_origin",
                  },
                  Object {
                    "label": "Dangerous Goods",
                    "value": "dangerous_goods",
                  },
                ]
              }
              value={
                Object {
                  "label": "Packing Sheet",
                  "value": "packing_sheet",
                }
              }
            />
          </div>
          <div
            className="flex-50 layout-align-end-center layout-row"
          >
            <FileUploader
              dispatchFn={null}
              square={false}
              text="Packing Sheet"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
              tooltip=""
              type="packing_sheet"
              uploadFn={null}
              url="/shipments/undefined/upload/packing_sheet"
            />
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-start-center"
          style={
            Object {
              "marginTop": "5px",
            }
          }
        >
          <div
            className="flex-45 layout-row"
            style={
              Object {
                "padding": "10px",
              }
            }
          >
            <DocumentsForm
              deleteFn={[Function]}
              dispatchFn={[Function]}
              displayOnly={false}
              doc={
                Object {
                  "doc_type": "foo",
                  "id": 0,
                }
              }
              isRequired={false}
              multiple={false}
              text=""
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
              tooltip=""
              type="foo"
              uploadFn={null}
              viewer={true}
            />
          </div>
          <div
            className="flex-45 layout-row"
            style={
              Object {
                "padding": "10px",
              }
            }
          >
            <DocumentsForm
              deleteFn={[Function]}
              dispatchFn={[Function]}
              displayOnly={false}
              doc={
                Object {
                  "doc_type": "bar",
                  "id": 1,
                }
              }
              isRequired={false}
              multiple={false}
              text=""
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
              tooltip=""
              type="bar"
              uploadFn={null}
              viewer={true}
            />
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-start-center"
          style={
            Object {
              "marginTop": "5px",
            }
          }
        >
          <div
            className="flex-25 layout-row layout-align-start-center no_doc"
          >
            <div
              className="flex-none layout-row layout-align-center-center"
            >
              <i
                className="flex-none fa fa-ban"
              />
            </div>
            <div
              className="flex layout-align-start-center layout-row"
            >
              <p
                className="flex-none"
              >
                undefined: Not Uploaded
              </p>
            </div>
          </div>
          <div
            className="flex-25 layout-row layout-align-start-center no_doc"
          >
            <div
              className="flex-none layout-row layout-align-center-center"
            >
              <i
                className="flex-none fa fa-ban"
              />
            </div>
            <div
              className="flex layout-align-start-center layout-row"
            >
              <p
                className="flex-none"
              >
                undefined: Not Uploaded
              </p>
            </div>
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Documents"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <Component
    content={
      <div
        className="flex-100"
      >
        <div
          className="flex-100 layout-row layout-wrap layout-align-space-between-start"
        >
          <p
            className="sec_title_text_normal flex-none"
          >
            Shipment:
          </p>
          <p
            className="sec_title_text flex-none offset-5"
            style="#333"
          />
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-space-between-start"
        >
          <p
            className="sec_subtitle_text_normal flex-none"
          >
            Status:
          </p>
          <p
            className="sec_subtitle_text flex-none offset-5 "
          />
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-space-between-start"
        >
          <p
            className="sec_subtitle_text_normal flex-none"
          >
            Created at:
          </p>
          <p
            className="sec_subtitle_text flex-none offset-5"
          >
            19
          </p>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Overview"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100"
      >
        <RouteHubBox
          route={
            Array [
              Object {
                "hub_route_key": "OCEAN_HUB_ROUTE_KEY",
                "mode_of_transport": "ocean",
              },
              Object {
                "hub_route_key": "AIR_HUB_ROUTE_KEY",
                "mode_of_transport": "air",
              },
              Object {
                "hub_route_key": "TRUCK_HUB_ROUTE_KEY",
                "mode_of_transport": "truck",
              },
              Object {
                "hub_route_key": "RAIL_HUB_ROUTE_KEY",
                "mode_of_transport": "rail",
              },
            ]
          }
          shipment={
            Object {
              "cargo_notes": "FOO_CARGO_NOTES",
              "eori": 1234,
              "has_on_carriage": false,
              "has_pre_carriage": false,
              "incoterm_text": "FOO_INCOTERM_TEXT",
              "load_type": "OCEAN_LOAD_TYPE",
              "notes": "FOO_NOTES",
              "schedules_charges": Object {
                "AIR_HUB_ROUTE_KEY": Object {
                  "total": 200,
                },
                "OCEAN_HUB_ROUTE_KEY": Object {
                  "total": 40,
                },
                "RAIL_HUB_ROUTE_KEY": Object {
                  "total": 125,
                },
                "TRUCK_HUB_ROUTE_KEY": Object {
                  "total": 75,
                },
              },
              "total_goods_value": Object {
                "currency": "USD",
                "value": 15,
              },
              "total_price": Object {
                "currency": "USD",
                "value": 12,
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
        <div
          className="flex-100 layout-row layout-align-space-between-center"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            className="flex-40 layout-row layout-wrap layout-align-center-center"
          >
            <div
              className="flex-100 layout-row layout-align-center-start layout-wrap"
            >
              <p
                className="flex-100 center letter_3"
              >
                 
                Expected Time of Departure:
              </p>
              <p
                className="flex-none letter_3"
              >
                19
              </p>
            </div>
          </div>
          <div
            className="flex-40 layout-row layout-wrap layout-align-center-center"
          >
            <div
              className="flex-100 layout-row layout-align-center-start layout-wrap"
            >
              <p
                className="flex-100 center letter_3"
              >
                 Expected Time of Arrival:
              </p>
              <p
                className="flex-none letter_3"
              >
                19
              </p>
            </div>
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Itinerary"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100"
      >
        <div
          className="total_row flex-100 layout-row layout-wrap layout-align-space-around-center"
        >
          <h3
            className="flex-70 letter_3"
          >
            Shipment Total:
          </h3>
          <div
            className="flex-30 layout-row layout-align-end-center"
          >
            <h3
              className="flex-none letter_3"
            >
              12.00
               
              USD
            </h3>
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-center-center"
        >
          <div
            className="flex-none content_width_booking layout-row layout-align-center-center"
          >
            <IncotermRow
              destinationFees={false}
              feeHash={Object {}}
              onCarriage={false}
              originFees={false}
              preCarriage={false}
              tenant={
                Object {
                  "data": Object {
                    "id": 123,
                    "scope": Object {
                      "modes_of_transport": Object {
                        "air": Object {},
                        "ocean": Object {
                          "OCEAN_LOAD_TYPE": true,
                        },
                        "rail": Object {},
                        "truck": Object {},
                      },
                    },
                    "subdomain": "foosubdomain",
                    "theme": Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    },
                  },
                }
              }
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Fares & Fees"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100"
      >
        <div
          className="flex-100 layout-row layout-align-center-center"
        >
          <div
            className="flex-none content_width_booking layout-row layout-align-center-center"
          >
            <IncotermExtras
              feeHash={Object {}}
              tenant={
                Object {
                  "data": Object {
                    "id": 123,
                    "scope": Object {
                      "modes_of_transport": Object {
                        "air": Object {},
                        "ocean": Object {
                          "OCEAN_LOAD_TYPE": true,
                        },
                        "rail": Object {},
                        "truck": Object {},
                      },
                    },
                    "subdomain": "foosubdomain",
                    "theme": Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    },
                  },
                }
              }
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Additional Services"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="layout-row layout-align-start-center b_summ_top flex-100 "
        >
          
        </div>
        <div
          className="layout-row layout-align-space-around-center b_summ_top flex-100 "
        >
          
          
        </div>
        <div
          className="flex-100 layout-row layout-align-space-around-center layout-wrap"
        >
           
           
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Contact Details"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center"
      />
    }
    handleCollapser={[Function]}
    headingText="Cargo Details"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center"
      >
        <div
          className="flex-100 layout-row layout-align-start-center"
        >
          <div
            className="flex-45 layout-row offset-5 layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Total Value of Goods:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              USD 15
            </p>
          </div>
          <div
            className="flex-45 offset-10 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                EORI number:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              1234
            </p>
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-space-around-center"
        >
          <div
            className="flex-45 offset-5 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Description of Goods:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              FOO_CARGO_NOTES
            </p>
          </div>
          <div
            className="flex-45 offset-5 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Notes:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              FOO_NOTES
            </p>
          </div>
          <div
            className="flex-45 offset-5 layout-row layout-align-start-start layout-wrap"
          >
            <p
              className="flex-100"
            >
              <b>
                Incoterm:
              </b>
            </p>
            <p
              className="flex-100 no_m"
            >
              FOO_INCOTERM_TEXT
            </p>
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Additional Info"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <Component
    content={
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="flex-100 layout-row layout-wrap layout-align-start-center"
        >
          <div
            className="flex-100 sec_subheader layout-row layout-align-space-between-center"
          >
            <p
              className="sec_subheader_text flex-none letter_3"
            >
              Upload New Document
            </p>
          </div>
          <div
            className="flex-50 layout-align-start-center layout-row"
          >
            <Styled(Select)
              className="select"
              name="file-type"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "Packing Sheet",
                    "value": "packing_sheet",
                  },
                  Object {
                    "label": "Commercial Invoice",
                    "value": "commercial_invoice",
                  },
                  Object {
                    "label": "Customs Declaration",
                    "value": "customs_declaration",
                  },
                  Object {
                    "label": "Customs Value Declaration",
                    "value": "customs_value_declaration",
                  },
                  Object {
                    "label": "EORI",
                    "value": "eori",
                  },
                  Object {
                    "label": "Certificate Of Origin",
                    "value": "certificate_of_origin",
                  },
                  Object {
                    "label": "Dangerous Goods",
                    "value": "dangerous_goods",
                  },
                ]
              }
              value={
                Object {
                  "label": "Packing Sheet",
                  "value": "packing_sheet",
                }
              }
            />
          </div>
          <div
            className="flex-50 layout-align-end-center layout-row"
          >
            <FileUploader
              dispatchFn={null}
              square={false}
              text="Packing Sheet"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
              tooltip=""
              type="packing_sheet"
              uploadFn={null}
              url="/shipments/undefined/upload/packing_sheet"
            />
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-start-center"
          style={
            Object {
              "marginTop": "5px",
            }
          }
        />
        <div
          className="flex-100 layout-row layout-wrap layout-align-start-center"
          style={
            Object {
              "marginTop": "5px",
            }
          }
        >
          <div
            className="flex-25 layout-row layout-align-start-center no_doc"
          >
            <div
              className="flex-none layout-row layout-align-center-center"
            >
              <i
                className="flex-none fa fa-ban"
              />
            </div>
            <div
              className="flex layout-align-start-center layout-row"
            >
              <p
                className="flex-none"
              >
                undefined: Not Uploaded
              </p>
            </div>
          </div>
          <div
            className="flex-25 layout-row layout-align-start-center no_doc"
          >
            <div
              className="flex-none layout-row layout-align-center-center"
            >
              <i
                className="flex-none fa fa-ban"
              />
            </div>
            <div
              className="flex layout-align-start-center layout-row"
            >
              <p
                className="flex-none"
              >
                undefined: Not Uploaded
              </p>
            </div>
          </div>
        </div>
      </div>
    }
    handleCollapser={[Function]}
    headingText="Documents"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
</div>
`;
